--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "apexcharts": "^5.3.6",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "react": "^19.2.0",
+    "react-apexcharts": "^1.9.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.0"
