--- a/src/modules/mobile-expo/app.json
+++ b/src/modules/mobile-expo/app.json
@@ -3,14 +3,19 @@
     "name": "mobile-expo",
     "slug": "mobile-expo",
     "version": "1.0.0",
+
+    "newArchEnabled": false,
+
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "mobileexpo",
     "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.mobileexpo"
     },
+
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
@@ -19,30 +24,22 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.anonymous.mobileexpo"
     },
+
     "web": {
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
-          "dark": {
-            "backgroundColor": "#000000"
-          }
-        }
-      ]
-    ],
-    "experiments": {
-      "typedRoutes": true,
-      "reactCompiler": true
+
+    "plugins": ["expo-router"],
+
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "c3d552c6-1256-40e9-a142-6564317ca309"
+      }
     }
   }
 }
