--- a/src/modules/mobile-expo/tsconfig.json
+++ b/src/modules/mobile-expo/tsconfig.json
@@ -11,7 +11,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".expo/types/**/*.ts",
-    "expo-env.d.ts"
-, "app/_layout.tsx", "app/index.tsx"  ]
+    "app/_layout.tsx",
+    "app/index.tsx"
+  ]
 }
