--- a/src/modules/mobile-expo/app.json
+++ b/src/modules/mobile-expo/app.json
@@ -4,7 +4,7 @@
     "slug": "mobile-expo",
     "version": "1.0.0",
 
-    "newArchEnabled": false,
+    "newArchEnabled": true,
 
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
