--- a/src/modules/mobile-expo/package.json
+++ b/src/modules/mobile-expo/package.json
@@ -15,16 +15,19 @@
     "expo-router": "~6.0.19",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
-    "react": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.9.2"
   }
 }
